--- a/config/crd/bases/pingcap.com_networkchaos.yaml
+++ b/config/crd/bases/pingcap.com_networkchaos.yaml
@@ -36,7 +36,8 @@ spec:
           properties:
             action:
               description: 'Action defines the specific network chaos action. Supported
-                action: delay Default action: delay'
+                action: partition, netem, delay, loss, duplicate, corrupt Default
+                action: delay'
               type: string
             corrupt:
               description: Corrupt represents the detail about corrupt action
