--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -121,7 +121,7 @@ prometheus:
   serviceAccount: prometheus
 
   image: prom/prometheus:v2.15.2
-  imagePullPolicy: IfNotPresent
+  imagePullPolicy: Always
 
   nodeSelector: {}
 
@@ -174,6 +174,7 @@ webhook:
     - timechaos
     - networkchaos
     - kernelchaos
+    - stresschaos
 
 bpfki:
   create: false
