--- a/images/chaos-daemon/Dockerfile
+++ b/images/chaos-daemon/Dockerfile
@@ -7,3 +7,4 @@ RUN apk add --no-cache tzdata iptables ipset stress-ng iproute2 util-linux
 
 COPY --from=pingcap/binary /src/bin/chaos-daemon /usr/local/bin/chaos-daemon
 COPY --from=pingcap/binary /src/bin/pause /usr/local/bin/pause
+COPY --from=pingcap/binary /src/bin/suicide /usr/local/bin/suicide
