--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -28,8 +28,8 @@ controllerManager:
 
   replicaCount: 1
 
-  image: pingcap/chaos-mesh:latest
-  imagePullPolicy: Always
+  image: pingcap/chaos-mesh:v0.9.0
+  imagePullPolicy: IfNotPresent
 
   nameOverride: ""
   fullnameOverride: ""
@@ -61,8 +61,8 @@ controllerManager:
   podAnnotations: {}
 
 chaosDaemon:
-  image: pingcap/chaos-daemon:latest
-  imagePullPolicy: Always
+  image: pingcap/chaos-daemon:v0.9.0
+  imagePullPolicy: IfNotPresent
   grpcPort: 31767
   httpPort: 31766
   env: {}
@@ -103,8 +103,8 @@ dashboard:
 
   serviceAccount: chaos-controller-manager
 
-  image: pingcap/chaos-dashboard:latest
-  imagePullPolicy: Always
+  image: pingcap/chaos-dashboard:v0.9.0
+  imagePullPolicy: IfNotPresent
 
   nodeSelector: {}
 
@@ -264,8 +264,8 @@ webhook:
 
 bpfki:
   create: false
-  image: pingcap/chaos-kernel:latest
-  imagePullPolicy: Always
+  image: pingcap/chaos-kernel:v0.9.0
+  imagePullPolicy: IfNotPresent
   grpcPort: 50051
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
