--- a/manifests/chaosfs-sidecar.yaml
+++ b/manifests/chaosfs-sidecar.yaml
@@ -10,13 +10,13 @@ data:
   data: |
     initContainers:
     - name: inject-scripts
-      image: pingcap/chaos-scripts:latest
-      imagePullPolicy: Always
+      image: pingcap/chaos-scripts:v0.9.0
+      imagePullPolicy: IfNotPresent
       command: ["sh", "-c", "/scripts/init.sh -d {{.DataPath}} -f {{.MountPath}}/fuse-data"]
     containers:
     - name: chaosfs
-      image: pingcap/chaos-fs:latest
-      imagePullPolicy: Always
+      image: pingcap/chaos-fs:v0.9.0
+      imagePullPolicy: IfNotPresent
       ports:
       - containerPort: 65534
       securityContext:
