--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -28,7 +28,7 @@ controllerManager:
 
   replicaCount: 1
 
-  image: pingcap/chaos-mesh:latest
+  image: localhost:5000/pingcap/chaos-mesh:latest
   imagePullPolicy: Always
 
   nameOverride: ""
@@ -61,7 +61,7 @@ controllerManager:
   podAnnotations: {}
 
 chaosDaemon:
-  image: pingcap/chaos-daemon:latest
+  image: localhost:5000/pingcap/chaos-daemon:latest
   imagePullPolicy: Always
   grpcPort: 31767
   httpPort: 31766
@@ -96,12 +96,12 @@ chaosDaemon:
 
   tolerations: []
 
-coredns:
+dnsServer:
   create: false
-  image: coredns/coredns:latest
+  image: coredns/coredns:latest # TODO: use image build with plugin k8s_dns_chaos
   imagePullPolicy: Always
   runtime: docker
-  name: coredns
+  name: dns-server
 
   env:
     LISTEN_HOST: "0.0.0.0"
@@ -114,7 +114,7 @@ dashboard:
 
   serviceAccount: chaos-controller-manager
 
-  image: pingcap/chaos-dashboard:latest
+  image: localhost:5000/pingcap/chaos-dashboard:latest
   imagePullPolicy: Always
 
   nodeSelector: {}
@@ -275,7 +275,7 @@ webhook:
 
 bpfki:
   create: false
-  image: pingcap/chaos-kernel:latest
+  image: localhost:5000/pingcap/chaos-kernel:latest
   imagePullPolicy: Always
   grpcPort: 50051
   resources: {}
