--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -45,14 +45,14 @@ spec:
               - partition
               - bandwidth
               type: string
+            chaosMode:
+              description: 'the value of chaos mode can be "RANDOM" or "ERROR":   "RANDOM":
+                return random IP for DNS request   "ERROR":  return error for DNS
+                request'
+              type: string
             duration:
               description: Duration represents the duration of the chaos action
               type: string
-            externalTargets:
-              description: ExternalTargets represents network targets outside k8s
-              items:
-                type: string
-              type: array
             mode:
               description: 'Mode defines the mode to run chaos action. Supported mode:
                 one / all / fixed / fixed-percent / random-max-percent'
@@ -76,6 +76,13 @@ spec:
               required:
               - cron
               type: object
+            scope:
+              description: 'scope means the chaos scope, values can be "INNER", "OUTER"
+                or "ALL":   "INNER": chaos only works on the inner host in Kubernetes
+                cluster   "OUTER": chaos only works on the outer host of Kubernetes
+                cluster   "ALL":   chaos works on all host TODO: maybe we can support
+                set the RegExp for the host'
+              type: string
             selector:
               description: Selector is used to select pods that are used to inject
                 chaos action.
@@ -138,12 +145,14 @@ spec:
                 / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`,
                 provide an integer of pods to do chaos action. If `FixedPercentPodMod`,
                 provide a number from 0-100 to specify the percent of pods the server
-                can do chaos action. If `RandomMaxPercentPodMod`,  provide a number
+                can do chaos action. If `RandomMaxPercentPodMod`, provide a number
                 from 0-100 to specify the max percent of pods to do chaos action
               type: string
           required:
           - action
+          - chaosMode
           - mode
+          - scope
           - selector
           type: object
         status:
